--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Server Control</title>
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    <style>
-        #output {
-            width: 100%;
-            height: 300px;
-            overflow-y: scroll;
-            background: #000;
-            color: #0f0;
-            padding: 10px;
-            font-family: monospace;
-        }
-        #status {
-            margin-top: 10px;
-        }
-    </style>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/index.css') }}">
 </head>
+
 <body>
     <h1>Server Control</h1>
     <div id="output"></div>
@@ -28,14 +17,16 @@
     <!--<button onclick="stopServer()">Stop Server</button>-->
     <input type="text" id="command" placeholder="Enter command">
     <button onclick="sendCommand()">Send Command</button>
+
     <h3>Most used commands:</h3>
     <ul>
-        <li>/stop - Stops the server after it's done initializing</li>
-        <li>/list - Lists the players logged on</li>
-        <li>/kill @e[type] - Kills the entity of type "type" (type is of format modpack:entity)</li>
-        <li>/op or /deop - Makes/Unmakes player admin</li>
-        <li>/kick [name] [reason] - Kicks player [name] for [reason]</li>
+        <li><strong>/stop</strong> - Stops the server after it's done initializing</li>
+        <li><strong>/list</strong> - Lists the players logged on</li>
+        <li><strong>/kill @e[type]</strong> - Kills the entity of type "type" (type is of format modpack:entity)</li>
+        <li><strong>/op or /deop</strong> - Makes/Unmakes player admin</li>
+        <li><strong>/kick [name] [reason]</strong> - Kicks player [name] for [reason]</li>
     </ul>
+
     <script>
         function updateStatus(serverRunning) {
             const statusElement = document.getElementById('server-status');
@@ -90,4 +81,5 @@
         setInterval(updateOutput, 1000);
     </script>
 </body>
+
 </html>
