--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" context="width=device-width, initial-scale=1.0"/>
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/login.css') }}">
         <title>Login</title>
     </head>
 
