--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #000000;
     margin: 0;
     padding: 0;
     display: flex;
@@ -11,7 +11,7 @@ body {
 }
 
 h1 {
-    color: #333;
+    color: #ffffff;
 }
 
 #output {
@@ -19,7 +19,7 @@ h1 {
     max-width: 1000px;
     height: 500px;
     overflow-y: auto;
-    background: #000;
+    background: #3d3d3d;
     color: #0f0;
     padding: 10px;
     font-family: monospace;
@@ -31,6 +31,7 @@ h1 {
 #status {
     margin-bottom: 20px;
     font-weight: bold;
+    color: #fff
 }
 
 button {
@@ -77,5 +78,5 @@ ul li:not(:last-child) {
 
 h3 {
     margin-top: 30px;
-    color: #333;
+    color: #ffffff;
 }
