--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Server Control</h1>
     <div id="output"></div>
-    <div>Server status: <span id="server-status">Unknown</span></div>
+    <div id="status">Server status: <span id="server-status">Unknown</span></div>
     <button onclick="startServer()">Start Server</button>
     <input type="text" id="command" placeholder="Enter command">
     <button onclick="sendCommand()">Send Command</button>
